cmake_minimum_required(VERSION 3.3)
project(trafficserver)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    ci/coverity-model.cpp
    cmd/traffic_cop/traffic_cop.cc
    cmd/traffic_crashlog/procinfo.cc
    cmd/traffic_crashlog/traffic_crashlog.cc
    cmd/traffic_crashlog/traffic_crashlog.h
    cmd/traffic_ctl/alarm.cc
    cmd/traffic_ctl/config.cc
    cmd/traffic_ctl/metric.cc
    cmd/traffic_ctl/server.cc
    cmd/traffic_ctl/storage.cc
    cmd/traffic_ctl/traffic_ctl.cc
    cmd/traffic_ctl/traffic_ctl.h
    cmd/traffic_layout/traffic_layout.cc
    cmd/traffic_line/traffic_line.cc
    cmd/traffic_manager/AddConfigFilesHere.cc
    cmd/traffic_manager/metrics.cc
    cmd/traffic_manager/metrics.h
    cmd/traffic_manager/MgmtHandlers.cc
    cmd/traffic_manager/MgmtHandlers.h
    cmd/traffic_manager/StatProcessor.cc
    cmd/traffic_manager/StatProcessor.h
    cmd/traffic_manager/StatType.cc
    cmd/traffic_manager/StatType.h
    cmd/traffic_manager/StatXML.cc
    cmd/traffic_manager/StatXML.h
    cmd/traffic_manager/traffic_manager.cc
    cmd/traffic_manager/WebOverview.cc
    cmd/traffic_manager/WebOverview.h
    cmd/traffic_top/stats.h
    cmd/traffic_top/traffic_top.cc
    cmd/traffic_via/traffic_via.cc
    cmd/traffic_wccp/wccp_client.cc
    example/add-header/add-header.c
    example/append-transform/append-transform.c
    example/basic-auth/basic-auth.c
    example/blacklist-0/blacklist-0.c
    example/blacklist-1/blacklist-1.c
    example/bnull-transform/bnull-transform.c
    example/cache-scan/cache-scan.cc
    example/file-1/file-1.c
    example/hello/hello.c
    example/intercept/intercept.cc
    example/lifecycle-plugin/lifecycle-plugin.c
    example/null-transform/null-transform.c
    example/output-header/output-header.c
    example/protocol/Protocol.c
    example/protocol/Protocol.h
    example/protocol/TxnSM.c
    example/protocol/TxnSM.h
    example/query-remap/query-remap.c
    example/redirect-1/redirect-1.c
    example/remap/remap.cc
    example/remap_header_add/remap_header_add.cc
    example/replace-header/replace-header.c
    example/response-header-1/response-header-1.c
    example/secure-link/secure-link.c
    example/server-transform/server-transform.c
    example/session-1/session-1.c
    example/ssl-preaccept/ats-util.h
    example/ssl-preaccept/ssl-preaccept.cc
    example/ssl-sni/ssl-sni.cc
    example/ssl-sni-whitelist/ssl-sni-whitelist.cc
    example/thread-1/thread-1.c
    example/thread-pool/include/gen.c
    example/thread-pool/test/SDKTest/psi_server.c
    example/thread-pool/psi.c
    example/thread-pool/thread.c
    example/thread-pool/thread.h
    example/txn-data-sink/txn-data-sink.c
    example/version/version.c
    iocore/aio/AIO.cc
    iocore/aio/I_AIO.h
    iocore/aio/Inline.cc
    iocore/aio/P_AIO.h
    iocore/aio/test_AIO.cc
    iocore/cache/AWSCache.cc
    iocore/cache/AWSCache.h
    iocore/cache/Cache.cc
    iocore/cache/CacheDir.cc
    iocore/cache/CacheDisk.cc
    iocore/cache/CacheHosting.cc
    iocore/cache/CacheHttp.cc
    iocore/cache/CacheLink.cc
    iocore/cache/CachePages.cc
    iocore/cache/CachePagesInternal.cc
    iocore/cache/CacheRead.cc
    iocore/cache/CacheTest.cc
    iocore/cache/CacheVol.cc
    iocore/cache/CacheWrite.cc
    iocore/cache/CloudCache.cc
    iocore/cache/CloudCache.h
    iocore/cache/CloudCacheProviderImpl.h
    iocore/cache/I_Cache.h
    iocore/cache/I_CacheDefs.h
    iocore/cache/I_Store.h
    iocore/cache/Inline.cc
    iocore/cache/P_Cache.h
    iocore/cache/P_CacheArray.h
    iocore/cache/P_CacheBC.h
    iocore/cache/P_CacheDir.h
    iocore/cache/P_CacheDisk.h
    iocore/cache/P_CacheHosting.h
    iocore/cache/P_CacheHttp.h
    iocore/cache/P_CacheInternal.h
    iocore/cache/P_CacheTest.h
    iocore/cache/P_CacheVol.h
    iocore/cache/P_RamCache.h
    iocore/cache/RamCacheCLFUS.cc
    iocore/cache/RamCacheLRU.cc
    iocore/cache/RedisClient.cc
    iocore/cache/RedisClient.h
    iocore/cache/redlock.cpp
    iocore/cache/redlock.h
    iocore/cache/sds.c
    iocore/cache/sds.h
    iocore/cache/Store.cc
    iocore/cluster/ClusterAPI.cc
    iocore/cluster/ClusterCache.cc
    iocore/cluster/ClusterConfig.cc
    iocore/cluster/ClusterHandler.cc
    iocore/cluster/ClusterHandlerBase.cc
    iocore/cluster/ClusterHash.cc
    iocore/cluster/ClusterLib.cc
    iocore/cluster/ClusterLoadMonitor.cc
    iocore/cluster/ClusterMachine.cc
    iocore/cluster/ClusterProcessor.cc
    iocore/cluster/ClusterRPC.cc
    iocore/cluster/ClusterVConnection.cc
    iocore/cluster/Inline.cc
    iocore/cluster/P_Cluster.h
    iocore/cluster/P_ClusterCache.h
    iocore/cluster/P_ClusterCacheInternal.h
    iocore/cluster/P_ClusterHandler.h
    iocore/cluster/P_ClusterInline.h
    iocore/cluster/P_ClusterInternal.h
    iocore/cluster/P_ClusterLib.h
    iocore/cluster/P_ClusterLoadMonitor.h
    iocore/cluster/P_ClusterMachine.h
    iocore/cluster/P_TimeTrace.h
    iocore/cluster/test_I_Cluster.cc
    iocore/cluster/test_P_Cluster.cc
    iocore/dns/DNS.cc
    iocore/dns/DNSConnection.cc
    iocore/dns/I_DNS.h
    iocore/dns/I_DNSProcessor.h
    iocore/dns/I_SplitDNS.h
    iocore/dns/I_SplitDNSProcessor.h
    iocore/dns/Inline.cc
    iocore/dns/P_DNS.h
    iocore/dns/P_DNSConnection.h
    iocore/dns/P_DNSProcessor.h
    iocore/dns/P_SplitDNS.h
    iocore/dns/P_SplitDNSProcessor.h
    iocore/dns/SplitDNS.cc
    iocore/dns/SRV.h
    iocore/dns/test_I_DNS.cc
    iocore/dns/test_P_DNS.cc
    iocore/eventsystem/EventSystem.cc
    iocore/eventsystem/I_Action.h
    iocore/eventsystem/I_Continuation.h
    iocore/eventsystem/I_EThread.h
    iocore/eventsystem/I_Event.h
    iocore/eventsystem/I_EventProcessor.h
    iocore/eventsystem/I_EventSystem.h
    iocore/eventsystem/I_IOBuffer.h
    iocore/eventsystem/I_Lock.h
    iocore/eventsystem/I_PriorityEventQueue.h
    iocore/eventsystem/I_Processor.h
    iocore/eventsystem/I_ProtectedQueue.h
    iocore/eventsystem/I_ProxyAllocator.h
    iocore/eventsystem/I_SocketManager.h
    iocore/eventsystem/I_Tasks.h
    iocore/eventsystem/I_Thread.h
    iocore/eventsystem/I_VConnection.h
    iocore/eventsystem/I_VIO.h
    iocore/eventsystem/Inline.cc
    iocore/eventsystem/IOBuffer.cc
    iocore/eventsystem/Lock.cc
    iocore/eventsystem/P_EventSystem.h
    iocore/eventsystem/P_Freer.h
    iocore/eventsystem/P_IOBuffer.h
    iocore/eventsystem/P_ProtectedQueue.h
    iocore/eventsystem/P_Thread.h
    iocore/eventsystem/P_UnixEThread.h
    iocore/eventsystem/P_UnixEvent.h
    iocore/eventsystem/P_UnixEventProcessor.h
    iocore/eventsystem/P_UnixSocketManager.h
    iocore/eventsystem/P_VConnection.h
    iocore/eventsystem/P_VIO.h
    iocore/eventsystem/PQ-List.cc
    iocore/eventsystem/Processor.cc
    iocore/eventsystem/ProtectedQueue.cc
    iocore/eventsystem/ProxyAllocator.cc
    iocore/eventsystem/SocketManager.cc
    iocore/eventsystem/Tasks.cc
    iocore/eventsystem/test_Buffer.cc
    iocore/eventsystem/test_Event.cc
    iocore/eventsystem/test_I_Buffer.cc
    iocore/eventsystem/test_I_Event.cc
    iocore/eventsystem/test_P_Buffer.cc
    iocore/eventsystem/test_P_Event.cc
    iocore/eventsystem/Thread.cc
    iocore/eventsystem/UnixEThread.cc
    iocore/eventsystem/UnixEvent.cc
    iocore/eventsystem/UnixEventProcessor.cc
    iocore/hostdb/include/Machine.h
    iocore/hostdb/HostDB.cc
    iocore/hostdb/I_HostDB.h
    iocore/hostdb/I_HostDBProcessor.h
    iocore/hostdb/Inline.cc
    iocore/hostdb/MultiCache.cc
    iocore/hostdb/P_HostDB.h
    iocore/hostdb/P_HostDBProcessor.h
    iocore/hostdb/P_MultiCache.h
    iocore/hostdb/test_I_HostDB.cc
    iocore/hostdb/test_P_HostDB.cc
    iocore/net/Connection.cc
    iocore/net/I_Net.h
    iocore/net/I_NetProcessor.h
    iocore/net/I_NetVConnection.h
    iocore/net/I_SessionAccept.h
    iocore/net/I_Socks.h
    iocore/net/I_UDPConnection.h
    iocore/net/I_UDPNet.h
    iocore/net/I_UDPPacket.h
    iocore/net/Inline.cc
    iocore/net/Net.cc
    iocore/net/NetTest-http-server.c
    iocore/net/NetVConnection.cc
    iocore/net/NetVCTest.cc
    iocore/net/OCSPStapling.cc
    iocore/net/P_CompletionUtil.h
    iocore/net/P_Connection.h
    iocore/net/P_InkBulkIO.h
    iocore/net/P_LibBulkIO.h
    iocore/net/P_Net.h
    iocore/net/P_NetAccept.h
    iocore/net/P_NetVConnection.h
    iocore/net/P_NetVCTest.h
    iocore/net/P_OCSPStapling.h
    iocore/net/P_Socks.h
    iocore/net/P_SSLCertLookup.h
    iocore/net/P_SSLClientUtils.h
    iocore/net/P_SSLConfig.h
    iocore/net/P_SSLNetAccept.h
    iocore/net/P_SSLNetProcessor.h
    iocore/net/P_SSLNetVConnection.h
    iocore/net/P_SSLNextProtocolAccept.h
    iocore/net/P_SSLNextProtocolSet.h
    iocore/net/P_SSLUtils.h
    iocore/net/P_UDPConnection.h
    iocore/net/P_UDPIOEvent.h
    iocore/net/P_UDPNet.h
    iocore/net/P_UDPPacket.h
    iocore/net/P_UnixCompletionUtil.h
    iocore/net/P_UnixNet.h
    iocore/net/P_UnixNetProcessor.h
    iocore/net/P_UnixNetState.h
    iocore/net/P_UnixNetVConnection.h
    iocore/net/P_UnixPollDescriptor.h
    iocore/net/P_UnixUDPConnection.h
    iocore/net/Socks.cc
    iocore/net/SSLCertLookup.cc
    iocore/net/SSLClientUtils.cc
    iocore/net/SSLConfig.cc
    iocore/net/SSLDynlock.cc
    iocore/net/SSLDynlock.h
    iocore/net/SSLInternal.cc
    iocore/net/SSLNetAccept.cc
    iocore/net/SSLNetProcessor.cc
    iocore/net/SSLNetVConnection.cc
    iocore/net/SSLNextProtocolAccept.cc
    iocore/net/SSLNextProtocolSet.cc
    iocore/net/SSLSessionCache.cc
    iocore/net/SSLSessionCache.h
    iocore/net/SSLUtils.cc
    iocore/net/test_certlookup.cc
    iocore/net/test_I_Net.cc
    iocore/net/test_I_UDPNet.cc
    iocore/net/test_P_Net.cc
    iocore/net/test_P_UDPNet.cc
    iocore/net/UDPIOEvent.cc
    iocore/net/UnixConnection.cc
    iocore/net/UnixNet.cc
    iocore/net/UnixNetAccept.cc
    iocore/net/UnixNetPages.cc
    iocore/net/UnixNetProcessor.cc
    iocore/net/UnixNetVConnection.cc
    iocore/net/UnixUDPConnection.cc
    iocore/net/UnixUDPNet.cc
    iocore/utils/diags.i
    iocore/utils/I_Machine.h
    iocore/utils/I_OneWayMultiTunnel.h
    iocore/utils/I_OneWayTunnel.h
    iocore/utils/Machine.cc
    iocore/utils/OneWayMultiTunnel.cc
    iocore/utils/OneWayTunnel.cc
    lib/atscppapi/examples/async_http_fetch/AsyncHttpFetch.cc
    lib/atscppapi/examples/async_http_fetch_streaming/AsyncHttpFetchStreaming.cc
    lib/atscppapi/examples/async_timer/AsyncTimer.cc
    lib/atscppapi/examples/boom/boom.cc
    lib/atscppapi/examples/clientredirect/ClientRedirect.cc
    lib/atscppapi/examples/clientrequest/ClientRequest.cc
    lib/atscppapi/examples/custom_error_remap_plugin/CustomErrorRemapPlugin.cc
    lib/atscppapi/examples/customresponse/CustomResponse.cc
    lib/atscppapi/examples/globalhook/GlobalHookPlugin.cc
    lib/atscppapi/examples/gzip_transformation/GzipTransformationPlugin.cc
    lib/atscppapi/examples/helloworld/HelloWorldPlugin.cc
    lib/atscppapi/examples/intercept/intercept.cc
    lib/atscppapi/examples/internal_transaction_handling/InternalTransactionHandling.cc
    lib/atscppapi/examples/logger_example/LoggerExample.cc
    lib/atscppapi/examples/multiple_transaction_hooks/MultipleTransactionHookPlugins.cc
    lib/atscppapi/examples/null_transformation_plugin/NullTransformationPlugin.cc
    lib/atscppapi/examples/post_buffer/PostBuffer.cc
    lib/atscppapi/examples/remap_plugin/RemapPlugin.cc
    lib/atscppapi/examples/serverresponse/ServerResponse.cc
    lib/atscppapi/examples/stat_example/StatExample.cc
    lib/atscppapi/examples/timeout_example/TimeoutExamplePlugin.cc
    lib/atscppapi/examples/transactionhook/TransactionHookPlugin.cc
    lib/atscppapi/src/include/atscppapi/Async.h
    lib/atscppapi/src/include/atscppapi/AsyncHttpFetch.h
    lib/atscppapi/src/include/atscppapi/AsyncTimer.h
    lib/atscppapi/src/include/atscppapi/CaseInsensitiveStringComparator.h
    lib/atscppapi/src/include/atscppapi/ClientRequest.h
    lib/atscppapi/src/include/atscppapi/GlobalPlugin.h
    lib/atscppapi/src/include/atscppapi/GzipDeflateTransformation.h
    lib/atscppapi/src/include/atscppapi/GzipInflateTransformation.h
    lib/atscppapi/src/include/atscppapi/Headers.h
    lib/atscppapi/src/include/atscppapi/HttpMethod.h
    lib/atscppapi/src/include/atscppapi/HttpStatus.h
    lib/atscppapi/src/include/atscppapi/HttpVersion.h
    lib/atscppapi/src/include/atscppapi/InterceptPlugin.h
    lib/atscppapi/src/include/atscppapi/Logger.h
    lib/atscppapi/src/include/atscppapi/Mutex.h
    lib/atscppapi/src/include/atscppapi/noncopyable.h
    lib/atscppapi/src/include/atscppapi/Plugin.h
    lib/atscppapi/src/include/atscppapi/PluginInit.h
    lib/atscppapi/src/include/atscppapi/RemapPlugin.h
    lib/atscppapi/src/include/atscppapi/Request.h
    lib/atscppapi/src/include/atscppapi/Response.h
    lib/atscppapi/src/include/atscppapi/shared_ptr.h
    lib/atscppapi/src/include/atscppapi/Stat.h
    lib/atscppapi/src/include/atscppapi/Transaction.h
    lib/atscppapi/src/include/atscppapi/TransactionPlugin.h
    lib/atscppapi/src/include/atscppapi/TransformationPlugin.h
    lib/atscppapi/src/include/atscppapi/Url.h
    lib/atscppapi/src/include/atscppapi/utils.h
    lib/atscppapi/src/include/logging_internal.h
    lib/atscppapi/src/include/utils_internal.h
    lib/atscppapi/src/AsyncHttpFetch.cc
    lib/atscppapi/src/AsyncTimer.cc
    lib/atscppapi/src/CaseInsensitiveStringComparator.cc
    lib/atscppapi/src/ClientRequest.cc
    lib/atscppapi/src/GlobalPlugin.cc
    lib/atscppapi/src/GzipDeflateTransformation.cc
    lib/atscppapi/src/GzipInflateTransformation.cc
    lib/atscppapi/src/Headers.cc
    lib/atscppapi/src/HttpMethod.cc
    lib/atscppapi/src/HttpVersion.cc
    lib/atscppapi/src/InterceptPlugin.cc
    lib/atscppapi/src/Logger.cc
    lib/atscppapi/src/Mutex.cc
    lib/atscppapi/src/Plugin.cc
    lib/atscppapi/src/RemapPlugin.cc
    lib/atscppapi/src/Request.cc
    lib/atscppapi/src/Response.cc
    lib/atscppapi/src/Stat.cc
    lib/atscppapi/src/Transaction.cc
    lib/atscppapi/src/TransactionPlugin.cc
    lib/atscppapi/src/TransformationPlugin.cc
    lib/atscppapi/src/Url.cc
    lib/atscppapi/src/utils.cc
    lib/atscppapi/src/utils_internal.cc
    lib/bindings/bindings.cc
    lib/bindings/bindings.h
    lib/bindings/lua.cc
    lib/bindings/lua.h
    lib/bindings/metrics.cc
    lib/bindings/metrics.h
    lib/bindings/repl.cc
    lib/bindings/repl.h
    lib/luajit/dynasm/dasm_arm.h
    lib/luajit/dynasm/dasm_mips.h
    lib/luajit/dynasm/dasm_ppc.h
    lib/luajit/dynasm/dasm_proto.h
    lib/luajit/dynasm/dasm_x86.h
    lib/luajit/src/host/buildvm.c
    lib/luajit/src/host/buildvm.h
    lib/luajit/src/host/buildvm_arch.h
    lib/luajit/src/host/buildvm_asm.c
    lib/luajit/src/host/buildvm_fold.c
    lib/luajit/src/host/buildvm_lib.c
    lib/luajit/src/host/buildvm_peobj.c
    lib/luajit/src/host/minilua.c
    lib/luajit/src/lauxlib.h
    lib/luajit/src/lib_aux.c
    lib/luajit/src/lib_base.c
    lib/luajit/src/lib_bit.c
    lib/luajit/src/lib_debug.c
    lib/luajit/src/lib_ffi.c
    lib/luajit/src/lib_init.c
    lib/luajit/src/lib_io.c
    lib/luajit/src/lib_jit.c
    lib/luajit/src/lib_math.c
    lib/luajit/src/lib_os.c
    lib/luajit/src/lib_package.c
    lib/luajit/src/lib_string.c
    lib/luajit/src/lib_table.c
    lib/luajit/src/lj_alloc.c
    lib/luajit/src/lj_alloc.h
    lib/luajit/src/lj_api.c
    lib/luajit/src/lj_arch.h
    lib/luajit/src/lj_asm.c
    lib/luajit/src/lj_asm.h
    lib/luajit/src/lj_asm_arm.h
    lib/luajit/src/lj_asm_mips.h
    lib/luajit/src/lj_asm_ppc.h
    lib/luajit/src/lj_asm_x86.h
    lib/luajit/src/lj_bc.c
    lib/luajit/src/lj_bc.h
    lib/luajit/src/lj_bcdef.h
    lib/luajit/src/lj_bcdump.h
    lib/luajit/src/lj_bcread.c
    lib/luajit/src/lj_bcwrite.c
    lib/luajit/src/lj_carith.c
    lib/luajit/src/lj_carith.h
    lib/luajit/src/lj_ccall.c
    lib/luajit/src/lj_ccall.h
    lib/luajit/src/lj_ccallback.c
    lib/luajit/src/lj_ccallback.h
    lib/luajit/src/lj_cconv.c
    lib/luajit/src/lj_cconv.h
    lib/luajit/src/lj_cdata.c
    lib/luajit/src/lj_cdata.h
    lib/luajit/src/lj_char.c
    lib/luajit/src/lj_char.h
    lib/luajit/src/lj_clib.c
    lib/luajit/src/lj_clib.h
    lib/luajit/src/lj_cparse.c
    lib/luajit/src/lj_cparse.h
    lib/luajit/src/lj_crecord.c
    lib/luajit/src/lj_crecord.h
    lib/luajit/src/lj_ctype.c
    lib/luajit/src/lj_ctype.h
    lib/luajit/src/lj_debug.c
    lib/luajit/src/lj_debug.h
    lib/luajit/src/lj_def.h
    lib/luajit/src/lj_dispatch.c
    lib/luajit/src/lj_dispatch.h
    lib/luajit/src/lj_emit_arm.h
    lib/luajit/src/lj_emit_mips.h
    lib/luajit/src/lj_emit_ppc.h
    lib/luajit/src/lj_emit_x86.h
    lib/luajit/src/lj_err.c
    lib/luajit/src/lj_err.h
    lib/luajit/src/lj_errmsg.h
    lib/luajit/src/lj_ff.h
    lib/luajit/src/lj_ffdef.h
    lib/luajit/src/lj_ffrecord.c
    lib/luajit/src/lj_ffrecord.h
    lib/luajit/src/lj_folddef.h
    lib/luajit/src/lj_frame.h
    lib/luajit/src/lj_func.c
    lib/luajit/src/lj_func.h
    lib/luajit/src/lj_gc.c
    lib/luajit/src/lj_gc.h
    lib/luajit/src/lj_gdbjit.c
    lib/luajit/src/lj_gdbjit.h
    lib/luajit/src/lj_ir.c
    lib/luajit/src/lj_ir.h
    lib/luajit/src/lj_ircall.h
    lib/luajit/src/lj_iropt.h
    lib/luajit/src/lj_jit.h
    lib/luajit/src/lj_lex.c
    lib/luajit/src/lj_lex.h
    lib/luajit/src/lj_lib.c
    lib/luajit/src/lj_lib.h
    lib/luajit/src/lj_libdef.h
    lib/luajit/src/lj_load.c
    lib/luajit/src/lj_mcode.c
    lib/luajit/src/lj_mcode.h
    lib/luajit/src/lj_meta.c
    lib/luajit/src/lj_meta.h
    lib/luajit/src/lj_obj.c
    lib/luajit/src/lj_obj.h
    lib/luajit/src/lj_opt_dce.c
    lib/luajit/src/lj_opt_fold.c
    lib/luajit/src/lj_opt_loop.c
    lib/luajit/src/lj_opt_mem.c
    lib/luajit/src/lj_opt_narrow.c
    lib/luajit/src/lj_opt_sink.c
    lib/luajit/src/lj_opt_split.c
    lib/luajit/src/lj_parse.c
    lib/luajit/src/lj_parse.h
    lib/luajit/src/lj_recdef.h
    lib/luajit/src/lj_record.c
    lib/luajit/src/lj_record.h
    lib/luajit/src/lj_snap.c
    lib/luajit/src/lj_snap.h
    lib/luajit/src/lj_state.c
    lib/luajit/src/lj_state.h
    lib/luajit/src/lj_str.c
    lib/luajit/src/lj_str.h
    lib/luajit/src/lj_strscan.c
    lib/luajit/src/lj_strscan.h
    lib/luajit/src/lj_tab.c
    lib/luajit/src/lj_tab.h
    lib/luajit/src/lj_target.h
    lib/luajit/src/lj_target_arm.h
    lib/luajit/src/lj_target_mips.h
    lib/luajit/src/lj_target_ppc.h
    lib/luajit/src/lj_target_x86.h
    lib/luajit/src/lj_trace.c
    lib/luajit/src/lj_trace.h
    lib/luajit/src/lj_traceerr.h
    lib/luajit/src/lj_udata.c
    lib/luajit/src/lj_udata.h
    lib/luajit/src/lj_vm.h
    lib/luajit/src/lj_vmevent.c
    lib/luajit/src/lj_vmevent.h
    lib/luajit/src/lj_vmmath.c
    lib/luajit/src/ljamalg.c
    lib/luajit/src/lua.h
    lib/luajit/src/lua.hpp
    lib/luajit/src/luaconf.h
    lib/luajit/src/luajit.c
    lib/luajit/src/luajit.h
    lib/luajit/src/lualib.h
    lib/raft/raft.h
    lib/raft/raft_impl.h
    lib/raft/raft_test.cc
    lib/records/I_RecAlarms.h
    lib/records/I_RecCore.h
    lib/records/I_RecDefs.h
    lib/records/I_RecEvents.h
    lib/records/I_RecHttp.h
    lib/records/I_RecLocal.h
    lib/records/I_RecMutex.h
    lib/records/I_RecProcess.h
    lib/records/I_RecSignals.h
    lib/records/P_RecCore.cc
    lib/records/P_RecCore.h
    lib/records/P_RecDefs.h
    lib/records/P_RecFile.h
    lib/records/P_RecLocal.h
    lib/records/P_RecMessage.h
    lib/records/P_RecProcess.h
    lib/records/P_RecUtils.h
    lib/records/RecConfigParse.cc
    lib/records/RecCore.cc
    lib/records/RecDebug.cc
    lib/records/RecFile.cc
    lib/records/RecHttp.cc
    lib/records/RecLocal.cc
    lib/records/RecMessage.cc
    lib/records/RecMutex.cc
    lib/records/RecProcess.cc
    lib/records/RecRawStats.cc
    lib/records/RecUtils.cc
    lib/records/test_I_RecLocal.cc
    lib/records/test_I_RecProcess.cc
    lib/records/test_P_RecProcess.cc
    lib/records/test_RecordsConfig.cc
    lib/records/test_RecordsConfig.h
    lib/records/test_RecProcess.i
    lib/records/test_RecTree.cc
    lib/ts/Allocator.h
    lib/ts/apidefs.h
    lib/ts/Arena.cc
    lib/ts/Arena.h
    lib/ts/BaseLogFile.cc
    lib/ts/BaseLogFile.h
    lib/ts/Bitops.cc
    lib/ts/Bitops.h
    lib/ts/CompileParseRules.cc
    lib/ts/ConsistentHash.cc
    lib/ts/ConsistentHash.h
    lib/ts/ContFlags.cc
    lib/ts/ContFlags.h
    lib/ts/CryptoHash.h
    lib/ts/defalloc.h
    lib/ts/Diags.cc
    lib/ts/Diags.h
    lib/ts/DynArray.h
    lib/ts/EventNotify.cc
    lib/ts/EventNotify.h
    lib/ts/fastlz.c
    lib/ts/fastlz.h
    lib/ts/Hash.cc
    lib/ts/Hash.h
    lib/ts/HashFNV.cc
    lib/ts/HashFNV.h
    lib/ts/HashMD5.cc
    lib/ts/HashMD5.h
    lib/ts/HashSip.cc
    lib/ts/HashSip.h
    lib/ts/HostLookup.cc
    lib/ts/HostLookup.h
    lib/ts/hugepages.cc
    lib/ts/hugepages.h
    lib/ts/I_Layout.h
    lib/ts/I_Version.h
    lib/ts/ink_aiocb.h
    lib/ts/ink_align.h
    lib/ts/ink_apidefs.h
    lib/ts/ink_args.cc
    lib/ts/ink_args.h
    lib/ts/ink_assert.cc
    lib/ts/ink_assert.h
    lib/ts/ink_atomic.h
    lib/ts/ink_base64.cc
    lib/ts/ink_base64.h
    lib/ts/ink_cap.cc
    lib/ts/ink_cap.h
    lib/ts/ink_code.cc
    lib/ts/ink_code.h
    lib/ts/ink_config.h
    lib/ts/ink_defs.cc
    lib/ts/ink_defs.h
    lib/ts/ink_error.cc
    lib/ts/ink_error.h
    lib/ts/ink_exception.h
    lib/ts/ink_file.cc
    lib/ts/ink_file.h
    lib/ts/ink_hash_table.cc
    lib/ts/ink_hash_table.h
    lib/ts/ink_hrtime.cc
    lib/ts/ink_hrtime.h
    lib/ts/ink_inet.cc
    lib/ts/ink_inet.h
    lib/ts/ink_inout.h
    lib/ts/ink_llqueue.h
    lib/ts/ink_lockfile.h
    lib/ts/INK_MD5.h
    lib/ts/ink_memory.cc
    lib/ts/ink_memory.h
    lib/ts/ink_mutex.cc
    lib/ts/ink_mutex.h
    lib/ts/ink_platform.h
    lib/ts/ink_queue.cc
    lib/ts/ink_queue.h
    lib/ts/ink_queue_utils.cc
    lib/ts/ink_rand.cc
    lib/ts/ink_rand.h
    lib/ts/ink_res_init.cc
    lib/ts/ink_res_mkquery.cc
    lib/ts/ink_resolver.h
    lib/ts/ink_resource.cc
    lib/ts/ink_resource.h
    lib/ts/ink_rwlock.cc
    lib/ts/ink_rwlock.h
    lib/ts/ink_sock.cc
    lib/ts/ink_sock.h
    lib/ts/ink_sprintf.cc
    lib/ts/ink_sprintf.h
    lib/ts/ink_stack_trace.cc
    lib/ts/ink_stack_trace.h
    lib/ts/ink_string++.cc
    lib/ts/ink_string++.h
    lib/ts/ink_string.cc
    lib/ts/ink_string.h
    lib/ts/ink_sys_control.cc
    lib/ts/ink_sys_control.h
    lib/ts/ink_syslog.cc
    lib/ts/ink_syslog.h
    lib/ts/ink_thread.cc
    lib/ts/ink_thread.h
    lib/ts/ink_time.cc
    lib/ts/ink_time.h
    lib/ts/InkErrno.h
    lib/ts/IntrusiveDList.h
    lib/ts/IntrusivePtrTest.cc
    lib/ts/IpMap.cc
    lib/ts/IpMap.h
    lib/ts/IpMapConf.cc
    lib/ts/IpMapConf.h
    lib/ts/IpMapTest.cc
    lib/ts/Layout.cc
    lib/ts/List.h
    lib/ts/llqueue.cc
    lib/ts/load_http_hdr.cc
    lib/ts/lockfile.cc
    lib/ts/Map.h
    lib/ts/MatcherUtils.cc
    lib/ts/MatcherUtils.h
    lib/ts/mkdfa.c
    lib/ts/MMH.cc
    lib/ts/MMH.h
    lib/ts/ParseRules.cc
    lib/ts/ParseRules.h
    lib/ts/PriorityQueue.h
    lib/ts/Ptr.h
    lib/ts/RawHashTable.cc
    lib/ts/RawHashTable.h
    lib/ts/RbTree.cc
    lib/ts/RbTree.h
    lib/ts/Regex.cc
    lib/ts/Regex.h
    lib/ts/Regression.cc
    lib/ts/Regression.h
    lib/ts/signals.cc
    lib/ts/signals.h
    lib/ts/SimpleTokenizer.h
    lib/ts/test_arena.cc
    lib/ts/test_atomic.cc
    lib/ts/test_freelist.cc
    lib/ts/test_geometry.cc
    lib/ts/test_List.cc
    lib/ts/test_Map.cc
    lib/ts/test_PriorityQueue.cc
    lib/ts/test_Regex.cc
    lib/ts/test_Vec.cc
    lib/ts/test_X509HostnameValidator.cc
    lib/ts/TestBox.h
    lib/ts/TestHttpHeader.cc
    lib/ts/TextBuffer.cc
    lib/ts/TextBuffer.h
    lib/ts/Tokenizer.cc
    lib/ts/Tokenizer.h
    lib/ts/Trie.h
    lib/ts/TsBuffer.h
    lib/ts/Vec.cc
    lib/ts/Vec.h
    lib/ts/Version.cc
    lib/ts/X509HostnameValidator.cc
    lib/ts/X509HostnameValidator.h
    lib/tsconfig/Errata.cc
    lib/tsconfig/Errata.h
    lib/tsconfig/IntrusivePtr.h
    lib/tsconfig/NumericType.h
    lib/tsconfig/test-tsconfig.cc
    lib/tsconfig/TsBuilder.cc
    lib/tsconfig/TsBuilder.h
    lib/tsconfig/TsConfigGrammar.c
    lib/tsconfig/TsConfigGrammar.h
    lib/tsconfig/TsConfigGrammar.hpp
    lib/tsconfig/TsConfigLexer.h
    lib/tsconfig/TsConfigParseEvents.h
    lib/tsconfig/TsConfigSyntax.c
    lib/tsconfig/TsConfigTypes.h
    lib/tsconfig/TsErrataUtil.cc
    lib/tsconfig/TsErrataUtil.h
    lib/tsconfig/TsValue.cc
    lib/tsconfig/TsValue.h
    lib/wccp/wccp-test-router.cc
    lib/wccp/Wccp.h
    lib/wccp/WccpConfig.cc
    lib/wccp/WccpEndPoint.cc
    lib/wccp/WccpLocal.h
    lib/wccp/WccpMeta.h
    lib/wccp/WccpMsg.cc
    lib/wccp/WccpStatic.cc
    lib/wccp/WccpUtil.h
    lib/ink_autoconf.h
    mgmt/api/include/mgmtapi.h
    mgmt/api/APITestCliRemote.cc
    mgmt/api/CfgContextDefs.h
    mgmt/api/CfgContextImpl.cc
    mgmt/api/CfgContextImpl.h
    mgmt/api/CfgContextManager.cc
    mgmt/api/CfgContextManager.h
    mgmt/api/CfgContextUtils.cc
    mgmt/api/CfgContextUtils.h
    mgmt/api/CoreAPI.cc
    mgmt/api/CoreAPI.h
    mgmt/api/CoreAPIRemote.cc
    mgmt/api/CoreAPIShared.cc
    mgmt/api/CoreAPIShared.h
    mgmt/api/EventCallback.cc
    mgmt/api/EventCallback.h
    mgmt/api/EventControlMain.cc
    mgmt/api/EventControlMain.h
    mgmt/api/GenericParser.cc
    mgmt/api/GenericParser.h
    mgmt/api/INKMgmtAPI.cc
    mgmt/api/NetworkMessage.cc
    mgmt/api/NetworkMessage.h
    mgmt/api/NetworkUtilsLocal.cc
    mgmt/api/NetworkUtilsLocal.h
    mgmt/api/NetworkUtilsRemote.cc
    mgmt/api/NetworkUtilsRemote.h
    mgmt/api/TSControlMain.cc
    mgmt/api/TSControlMain.h
    mgmt/cluster/ClusterCom.cc
    mgmt/cluster/ClusterCom.h
    mgmt/cluster/VMap.cc
    mgmt/cluster/VMap.h
    mgmt/utils/ExpandingArray.cc
    mgmt/utils/ExpandingArray.h
    mgmt/utils/MgmtHashTable.h
    mgmt/utils/MgmtLocalCleanup.cc
    mgmt/utils/MgmtMarshall.cc
    mgmt/utils/MgmtMarshall.h
    mgmt/utils/MgmtProcessCleanup.cc
    mgmt/utils/MgmtSocket.cc
    mgmt/utils/MgmtSocket.h
    mgmt/utils/MgmtUtils.cc
    mgmt/utils/MgmtUtils.h
    mgmt/utils/test_marshall.cc
    mgmt/Alarms.cc
    mgmt/Alarms.h
    mgmt/BaseManager.cc
    mgmt/BaseManager.h
    mgmt/Cop.h
    mgmt/FileManager.cc
    mgmt/FileManager.h
    mgmt/LocalManager.cc
    mgmt/LocalManager.h
    mgmt/MgmtDefs.h
    mgmt/MultiFile.cc
    mgmt/MultiFile.h
    mgmt/ProcessManager.cc
    mgmt/ProcessManager.h
    mgmt/ProxyConfig.cc
    mgmt/ProxyConfig.h
    mgmt/RecordsConfig.cc
    mgmt/RecordsConfig.h
    mgmt/RecordsConfigUtils.cc
    mgmt/Rollback.cc
    mgmt/Rollback.h
    mgmt/WebMgmtUtils.cc
    mgmt/WebMgmtUtils.h
    plugins/cacheurl/cacheurl.cc
    plugins/conf_remap/conf_remap.cc
    plugins/experimental/ats_pagespeed/gzip/configuration.cc
    plugins/experimental/ats_pagespeed/gzip/configuration.h
    plugins/experimental/ats_pagespeed/gzip/debug_macros.h
    plugins/experimental/ats_pagespeed/gzip/gzip.cc
    plugins/experimental/ats_pagespeed/gzip/misc.cc
    plugins/experimental/ats_pagespeed/gzip/misc.h
    plugins/experimental/ats_pagespeed/ats_base_fetch.cc
    plugins/experimental/ats_pagespeed/ats_base_fetch.h
    plugins/experimental/ats_pagespeed/ats_beacon_intercept.cc
    plugins/experimental/ats_pagespeed/ats_beacon_intercept.h
    plugins/experimental/ats_pagespeed/ats_config.cc
    plugins/experimental/ats_pagespeed/ats_config.h
    plugins/experimental/ats_pagespeed/ats_header_utils.cc
    plugins/experimental/ats_pagespeed/ats_header_utils.h
    plugins/experimental/ats_pagespeed/ats_log_message_handler.cc
    plugins/experimental/ats_pagespeed/ats_log_message_handler.h
    plugins/experimental/ats_pagespeed/ats_message_handler.cc
    plugins/experimental/ats_pagespeed/ats_message_handler.h
    plugins/experimental/ats_pagespeed/ats_pagespeed.cc
    plugins/experimental/ats_pagespeed/ats_pagespeed.h
    plugins/experimental/ats_pagespeed/ats_process_context.cc
    plugins/experimental/ats_pagespeed/ats_process_context.h
    plugins/experimental/ats_pagespeed/ats_resource_intercept.cc
    plugins/experimental/ats_pagespeed/ats_resource_intercept.h
    plugins/experimental/ats_pagespeed/ats_rewrite_driver_factory.cc
    plugins/experimental/ats_pagespeed/ats_rewrite_driver_factory.h
    plugins/experimental/ats_pagespeed/ats_rewrite_options.cc
    plugins/experimental/ats_pagespeed/ats_rewrite_options.h
    plugins/experimental/ats_pagespeed/ats_server_context.cc
    plugins/experimental/ats_pagespeed/ats_server_context.h
    plugins/experimental/ats_pagespeed/ats_thread_system.h
    plugins/experimental/authproxy/authproxy.cc
    plugins/experimental/authproxy/utils.cc
    plugins/experimental/authproxy/utils.h
    plugins/experimental/background_fetch/background_fetch.cc
    plugins/experimental/background_fetch/configs.cc
    plugins/experimental/background_fetch/configs.h
    plugins/experimental/background_fetch/headers.cc
    plugins/experimental/background_fetch/headers.h
    plugins/experimental/background_fetch/rules.cc
    plugins/experimental/background_fetch/rules.h
    plugins/experimental/balancer/balancer.cc
    plugins/experimental/balancer/balancer.h
    plugins/experimental/balancer/hash.cc
    plugins/experimental/balancer/roundrobin.cc
    plugins/experimental/buffer_upload/buffer_upload.cc
    plugins/experimental/cache_key_genid/cache_key_genid.c
    plugins/experimental/cache_promote/cache_promote.cc
    plugins/experimental/cache_range_requests/cache_range_requests.cc
    plugins/experimental/cachekey/tests/pattern_test.cc
    plugins/experimental/cachekey/cachekey.cc
    plugins/experimental/cachekey/cachekey.h
    plugins/experimental/cachekey/common.cc
    plugins/experimental/cachekey/common.h
    plugins/experimental/cachekey/configs.cc
    plugins/experimental/cachekey/configs.h
    plugins/experimental/cachekey/pattern.cc
    plugins/experimental/cachekey/pattern.h
    plugins/experimental/cachekey/plugin.cc
    plugins/experimental/channel_stats/channel_stats.cc
    plugins/experimental/channel_stats/debug_macros.h
    plugins/experimental/collapsed_connection/collapsed_connection.cc
    plugins/experimental/collapsed_connection/MurmurHash3.cc
    plugins/experimental/collapsed_connection/MurmurHash3.h
    plugins/experimental/collapsed_connection/P_collapsed_connection.h
    plugins/experimental/collapsed_forwarding/collapsed_forwarding.cc
    plugins/experimental/custom_redirect/custom_redirect.cc
    plugins/experimental/epic/epic.cc
    plugins/experimental/escalate/escalate.cc
    plugins/experimental/esi/fetcher/FetchedDataProcessor.h
    plugins/experimental/esi/fetcher/HttpDataFetcher.h
    plugins/experimental/esi/fetcher/HttpDataFetcherImpl.cc
    plugins/experimental/esi/fetcher/HttpDataFetcherImpl.h
    plugins/experimental/esi/lib/Attribute.h
    plugins/experimental/esi/lib/ComponentBase.h
    plugins/experimental/esi/lib/DocNode.cc
    plugins/experimental/esi/lib/DocNode.h
    plugins/experimental/esi/lib/EsiGunzip.cc
    plugins/experimental/esi/lib/EsiGunzip.h
    plugins/experimental/esi/lib/EsiGzip.cc
    plugins/experimental/esi/lib/EsiGzip.h
    plugins/experimental/esi/lib/EsiParser.cc
    plugins/experimental/esi/lib/EsiParser.h
    plugins/experimental/esi/lib/EsiProcessor.cc
    plugins/experimental/esi/lib/EsiProcessor.h
    plugins/experimental/esi/lib/Expression.cc
    plugins/experimental/esi/lib/Expression.h
    plugins/experimental/esi/lib/FailureInfo.cc
    plugins/experimental/esi/lib/FailureInfo.h
    plugins/experimental/esi/lib/gzip.cc
    plugins/experimental/esi/lib/gzip.h
    plugins/experimental/esi/lib/HandlerManager.cc
    plugins/experimental/esi/lib/HandlerManager.h
    plugins/experimental/esi/lib/HttpHeader.h
    plugins/experimental/esi/lib/IncludeHandlerFactory.h
    plugins/experimental/esi/lib/SpecialIncludeHandler.h
    plugins/experimental/esi/lib/Stats.cc
    plugins/experimental/esi/lib/Stats.h
    plugins/experimental/esi/lib/StringHash.h
    plugins/experimental/esi/lib/Utils.cc
    plugins/experimental/esi/lib/Utils.h
    plugins/experimental/esi/lib/Variables.cc
    plugins/experimental/esi/lib/Variables.h
    plugins/experimental/esi/test/docnode_test.cc
    plugins/experimental/esi/test/HandlerMap.cc
    plugins/experimental/esi/test/HandlerMap.h
    plugins/experimental/esi/test/parser_test.cc
    plugins/experimental/esi/test/print_funcs.cc
    plugins/experimental/esi/test/print_funcs.h
    plugins/experimental/esi/test/processor_test.cc
    plugins/experimental/esi/test/sampleProb.cc
    plugins/experimental/esi/test/StubIncludeHandler.cc
    plugins/experimental/esi/test/StubIncludeHandler.h
    plugins/experimental/esi/test/TestHandlerManager.cc
    plugins/experimental/esi/test/TestHttpDataFetcher.h
    plugins/experimental/esi/test/utils_test.cc
    plugins/experimental/esi/test/vars_test.cc
    plugins/experimental/esi/combo_handler.cc
    plugins/experimental/esi/esi.cc
    plugins/experimental/esi/serverIntercept.cc
    plugins/experimental/esi/serverIntercept.h
    plugins/experimental/flying_squid/flying_squid.cc
    plugins/experimental/generator/generator.cc
    plugins/experimental/geoip_acl/acl.cc
    plugins/experimental/geoip_acl/acl.h
    plugins/experimental/geoip_acl/geoip_acl.cc
    plugins/experimental/geoip_acl/lulu.h
    plugins/experimental/header_normalize/header_normalize.cc
    plugins/experimental/hipes/gen_escape.c
    plugins/experimental/hipes/hipes.cc
    plugins/experimental/inliner/ats-inliner.cc
    plugins/experimental/inliner/cache-handler.h
    plugins/experimental/inliner/cache.cc
    plugins/experimental/inliner/cache.h
    plugins/experimental/inliner/chunk-decoder.cc
    plugins/experimental/inliner/chunk-decoder.h
    plugins/experimental/inliner/fetcher.cc
    plugins/experimental/inliner/fetcher.h
    plugins/experimental/inliner/gif.h
    plugins/experimental/inliner/html-parser.cc
    plugins/experimental/inliner/html-parser.h
    plugins/experimental/inliner/inliner-handler.cc
    plugins/experimental/inliner/inliner-handler.h
    plugins/experimental/inliner/jpeg.h
    plugins/experimental/inliner/png.h
    plugins/experimental/inliner/ts.cc
    plugins/experimental/inliner/ts.h
    plugins/experimental/inliner/util.h
    plugins/experimental/inliner/vconnection.h
    plugins/experimental/memcache/protocol_binary.h
    plugins/experimental/memcache/tsmemcache.cc
    plugins/experimental/memcache/tsmemcache.h
    plugins/experimental/memcached_remap/memcached_remap.cc
    plugins/experimental/metalink/metalink.cc
    plugins/experimental/mp4/mp4.cc
    plugins/experimental/mp4/mp4_common.h
    plugins/experimental/mp4/mp4_meta.cc
    plugins/experimental/mp4/mp4_meta.h
    plugins/experimental/multiplexer/ats-multiplexer.cc
    plugins/experimental/multiplexer/chunk-decoder.cc
    plugins/experimental/multiplexer/chunk-decoder.h
    plugins/experimental/multiplexer/dispatch.cc
    plugins/experimental/multiplexer/dispatch.h
    plugins/experimental/multiplexer/fetcher.cc
    plugins/experimental/multiplexer/fetcher.h
    plugins/experimental/multiplexer/original-request.cc
    plugins/experimental/multiplexer/original-request.h
    plugins/experimental/multiplexer/post.cc
    plugins/experimental/multiplexer/post.h
    plugins/experimental/multiplexer/ts.cc
    plugins/experimental/multiplexer/ts.h
    plugins/experimental/mysql_remap/lib/dictionary.c
    plugins/experimental/mysql_remap/lib/dictionary.h
    plugins/experimental/mysql_remap/lib/iniparser.c
    plugins/experimental/mysql_remap/lib/iniparser.h
    plugins/experimental/mysql_remap/default.h
    plugins/experimental/mysql_remap/mysql_remap.cc
    plugins/experimental/regex_revalidate/regex_revalidate.c
    plugins/experimental/remap_stats/remap_stats.c
    plugins/experimental/s3_auth/s3_auth.cc
    plugins/experimental/ssl_cert_loader/ats-util.h
    plugins/experimental/ssl_cert_loader/domain-tree.cc
    plugins/experimental/ssl_cert_loader/domain-tree.h
    plugins/experimental/ssl_cert_loader/ssl-cert-loader.cc
    plugins/experimental/sslheaders/expand.cc
    plugins/experimental/sslheaders/sslheaders.cc
    plugins/experimental/sslheaders/sslheaders.h
    plugins/experimental/sslheaders/test_sslheaders.cc
    plugins/experimental/sslheaders/util.cc
    plugins/experimental/stale_while_revalidate/stale_while_revalidate.c
    plugins/experimental/stream_editor/stream_editor.cc
    plugins/experimental/ts_lua/ts_lua.c
    plugins/experimental/ts_lua/ts_lua_cached_response.c
    plugins/experimental/ts_lua/ts_lua_cached_response.h
    plugins/experimental/ts_lua/ts_lua_client_request.c
    plugins/experimental/ts_lua/ts_lua_client_request.h
    plugins/experimental/ts_lua/ts_lua_client_response.c
    plugins/experimental/ts_lua/ts_lua_client_response.h
    plugins/experimental/ts_lua/ts_lua_common.h
    plugins/experimental/ts_lua/ts_lua_constant.c
    plugins/experimental/ts_lua/ts_lua_constant.h
    plugins/experimental/ts_lua/ts_lua_context.c
    plugins/experimental/ts_lua/ts_lua_context.h
    plugins/experimental/ts_lua/ts_lua_coroutine.c
    plugins/experimental/ts_lua/ts_lua_coroutine.h
    plugins/experimental/ts_lua/ts_lua_crypto.c
    plugins/experimental/ts_lua/ts_lua_crypto.h
    plugins/experimental/ts_lua/ts_lua_fetch.c
    plugins/experimental/ts_lua/ts_lua_fetch.h
    plugins/experimental/ts_lua/ts_lua_hook.c
    plugins/experimental/ts_lua/ts_lua_hook.h
    plugins/experimental/ts_lua/ts_lua_http.c
    plugins/experimental/ts_lua/ts_lua_http.h
    plugins/experimental/ts_lua/ts_lua_http_cntl.c
    plugins/experimental/ts_lua/ts_lua_http_cntl.h
    plugins/experimental/ts_lua/ts_lua_http_config.c
    plugins/experimental/ts_lua/ts_lua_http_config.h
    plugins/experimental/ts_lua/ts_lua_http_intercept.c
    plugins/experimental/ts_lua/ts_lua_http_intercept.h
    plugins/experimental/ts_lua/ts_lua_http_milestone.c
    plugins/experimental/ts_lua/ts_lua_http_milestone.h
    plugins/experimental/ts_lua/ts_lua_io.c
    plugins/experimental/ts_lua/ts_lua_io.h
    plugins/experimental/ts_lua/ts_lua_log.c
    plugins/experimental/ts_lua/ts_lua_log.h
    plugins/experimental/ts_lua/ts_lua_mgmt.c
    plugins/experimental/ts_lua/ts_lua_mgmt.h
    plugins/experimental/ts_lua/ts_lua_misc.c
    plugins/experimental/ts_lua/ts_lua_misc.h
    plugins/experimental/ts_lua/ts_lua_package.c
    plugins/experimental/ts_lua/ts_lua_package.h
    plugins/experimental/ts_lua/ts_lua_remap.c
    plugins/experimental/ts_lua/ts_lua_remap.h
    plugins/experimental/ts_lua/ts_lua_server_request.c
    plugins/experimental/ts_lua/ts_lua_server_request.h
    plugins/experimental/ts_lua/ts_lua_server_response.c
    plugins/experimental/ts_lua/ts_lua_server_response.h
    plugins/experimental/ts_lua/ts_lua_stat.c
    plugins/experimental/ts_lua/ts_lua_stat.h
    plugins/experimental/ts_lua/ts_lua_string.c
    plugins/experimental/ts_lua/ts_lua_string.h
    plugins/experimental/ts_lua/ts_lua_transform.c
    plugins/experimental/ts_lua/ts_lua_transform.h
    plugins/experimental/ts_lua/ts_lua_util.c
    plugins/experimental/ts_lua/ts_lua_util.h
    plugins/experimental/url_sig/url_sig.c
    plugins/experimental/url_sig/url_sig.h
    plugins/experimental/webp_transform/ImageTransform.cc
    plugins/experimental/xdebug/xdebug.cc
    plugins/gzip/configuration.cc
    plugins/gzip/configuration.h
    plugins/gzip/debug_macros.h
    plugins/gzip/gzip.cc
    plugins/gzip/misc.cc
    plugins/gzip/misc.h
    plugins/header_rewrite/condition.cc
    plugins/header_rewrite/condition.h
    plugins/header_rewrite/conditions.cc
    plugins/header_rewrite/conditions.h
    plugins/header_rewrite/expander.cc
    plugins/header_rewrite/expander.h
    plugins/header_rewrite/factory.cc
    plugins/header_rewrite/factory.h
    plugins/header_rewrite/header_rewrite.cc
    plugins/header_rewrite/header_rewrite_test.cc
    plugins/header_rewrite/lulu.cc
    plugins/header_rewrite/lulu.h
    plugins/header_rewrite/matcher.h
    plugins/header_rewrite/operator.cc
    plugins/header_rewrite/operator.h
    plugins/header_rewrite/operators.cc
    plugins/header_rewrite/operators.h
    plugins/header_rewrite/parser.cc
    plugins/header_rewrite/parser.h
    plugins/header_rewrite/regex_helper.cc
    plugins/header_rewrite/regex_helper.h
    plugins/header_rewrite/resources.cc
    plugins/header_rewrite/resources.h
    plugins/header_rewrite/ruleset.cc
    plugins/header_rewrite/ruleset.h
    plugins/header_rewrite/statement.cc
    plugins/header_rewrite/statement.h
    plugins/header_rewrite/value.h
    plugins/healthchecks/healthchecks.c
    plugins/libloader/libloader.c
    plugins/regex_remap/regex_remap.cc
    plugins/stats_over_http/stats_over_http.c
    plugins/tcpinfo/tcpinfo.cc
    proxy/api/ts/experimental.h
    proxy/api/ts/InkAPIPrivateIOCore.h
    proxy/api/ts/remap.h
    proxy/api/ts/ts.h
    proxy/api/ts/TsException.h
    proxy/congest/Congestion.cc
    proxy/congest/Congestion.h
    proxy/congest/CongestionDB.cc
    proxy/congest/CongestionDB.h
    proxy/congest/CongestionStats.cc
    proxy/congest/CongestionStats.h
    proxy/congest/CongestionTest.cc
    proxy/congest/MT_hashtable.h
    proxy/hdrs/HdrHeap.cc
    proxy/hdrs/HdrHeap.h
    proxy/hdrs/HdrTest.cc
    proxy/hdrs/HdrTest.h
    proxy/hdrs/HdrToken.cc
    proxy/hdrs/HdrToken.h
    proxy/hdrs/HdrTSOnly.cc
    proxy/hdrs/HdrUtils.cc
    proxy/hdrs/HdrUtils.h
    proxy/hdrs/HTTP.cc
    proxy/hdrs/HTTP.h
    proxy/hdrs/HttpCompat.cc
    proxy/hdrs/HttpCompat.h
    proxy/hdrs/load_http_hdr.cc
    proxy/hdrs/MIME.cc
    proxy/hdrs/MIME.h
    proxy/hdrs/test_header.cc
    proxy/hdrs/test_mime.cc
    proxy/hdrs/test_urlhash.cc
    proxy/hdrs/URL.cc
    proxy/hdrs/URL.h
    proxy/http/remap/AclFiltering.cc
    proxy/http/remap/AclFiltering.h
    proxy/http/remap/RemapConfig.cc
    proxy/http/remap/RemapConfig.h
    proxy/http/remap/RemapPluginInfo.cc
    proxy/http/remap/RemapPluginInfo.h
    proxy/http/remap/RemapPlugins.cc
    proxy/http/remap/RemapPlugins.h
    proxy/http/remap/RemapProcessor.cc
    proxy/http/remap/RemapProcessor.h
    proxy/http/remap/UrlMapping.cc
    proxy/http/remap/UrlMapping.h
    proxy/http/remap/UrlMappingPathIndex.cc
    proxy/http/remap/UrlMappingPathIndex.h
    proxy/http/remap/UrlRewrite.cc
    proxy/http/remap/UrlRewrite.h
    proxy/http/HttpBodyFactory.cc
    proxy/http/HttpBodyFactory.h
    proxy/http/HttpCacheSM.cc
    proxy/http/HttpCacheSM.h
    proxy/http/HttpClientSession.cc
    proxy/http/HttpClientSession.h
    proxy/http/HttpConfig.cc
    proxy/http/HttpConfig.h
    proxy/http/HttpConnectionCount.cc
    proxy/http/HttpConnectionCount.h
    proxy/http/HttpDebugNames.cc
    proxy/http/HttpDebugNames.h
    proxy/http/HttpPages.cc
    proxy/http/HttpPages.h
    proxy/http/HttpProxyAPIEnums.h
    proxy/http/HttpProxyServerMain.cc
    proxy/http/HttpProxyServerMain.h
    proxy/http/HttpServerSession.cc
    proxy/http/HttpServerSession.h
    proxy/http/HttpSessionAccept.cc
    proxy/http/HttpSessionAccept.h
    proxy/http/HttpSessionManager.cc
    proxy/http/HttpSessionManager.h
    proxy/http/HttpSM.cc
    proxy/http/HttpSM.h
    proxy/http/HttpTransact.cc
    proxy/http/HttpTransact.h
    proxy/http/HttpTransactCache.cc
    proxy/http/HttpTransactCache.h
    proxy/http/HttpTransactHeaders.cc
    proxy/http/HttpTransactHeaders.h
    proxy/http/HttpTunnel.cc
    proxy/http/HttpTunnel.h
    proxy/http/HttpUpdateSM.cc
    proxy/http/HttpUpdateSM.h
    proxy/http/HttpUpdateTester.cc
    proxy/http/RegressionHttpTransact.cc
    proxy/http/test_socket_close.cc
    proxy/http/testheaders.cc
    proxy/http/TestHttpTransact.cc
    proxy/http/TestUrl.cc
    proxy/http2/HPACK.cc
    proxy/http2/HPACK.h
    proxy/http2/HTTP2.cc
    proxy/http2/HTTP2.h
    proxy/http2/Http2ClientSession.cc
    proxy/http2/Http2ClientSession.h
    proxy/http2/Http2ConnectionState.cc
    proxy/http2/Http2ConnectionState.h
    proxy/http2/Http2DebugNames.cc
    proxy/http2/Http2DebugNames.h
    proxy/http2/Http2SessionAccept.cc
    proxy/http2/Http2SessionAccept.h
    proxy/http2/Http2Stream.cc
    proxy/http2/Http2Stream.h
    proxy/http2/HuffmanCodec.cc
    proxy/http2/HuffmanCodec.h
    proxy/http2/RegressionHPACK.cc
    proxy/http2/test_Huffmancode.cc
    proxy/logging/Log.cc
    proxy/logging/Log.h
    proxy/logging/LogAccess.cc
    proxy/logging/LogAccess.h
    proxy/logging/LogAccessHttp.cc
    proxy/logging/LogAccessHttp.h
    proxy/logging/LogAccessICP.cc
    proxy/logging/LogAccessICP.h
    proxy/logging/LogAccessTest.cc
    proxy/logging/LogAccessTest.h
    proxy/logging/LogBuffer.cc
    proxy/logging/LogBuffer.h
    proxy/logging/LogBufferSink.h
    proxy/logging/LogCollationAccept.cc
    proxy/logging/LogCollationAccept.h
    proxy/logging/LogCollationBase.h
    proxy/logging/LogCollationClientSM.cc
    proxy/logging/LogCollationClientSM.h
    proxy/logging/LogCollationHostSM.cc
    proxy/logging/LogCollationHostSM.h
    proxy/logging/LogConfig.cc
    proxy/logging/LogConfig.h
    proxy/logging/LogField.cc
    proxy/logging/LogField.h
    proxy/logging/LogFieldAliasMap.cc
    proxy/logging/LogFieldAliasMap.h
    proxy/logging/LogFile.cc
    proxy/logging/LogFile.h
    proxy/logging/LogFilter.cc
    proxy/logging/LogFilter.h
    proxy/logging/LogFormat.cc
    proxy/logging/LogFormat.h
    proxy/logging/LogHost.cc
    proxy/logging/LogHost.h
    proxy/logging/LogLimits.h
    proxy/logging/LogObject.cc
    proxy/logging/LogObject.h
    proxy/logging/LogSock.cc
    proxy/logging/LogSock.h
    proxy/logging/LogStandalone.cc
    proxy/logging/LogUtils.cc
    proxy/logging/LogUtils.h
    proxy/shared/DiagsConfig.cc
    proxy/shared/DiagsConfig.h
    proxy/shared/Error.cc
    proxy/shared/Error.h
    proxy/shared/InkXml.cc
    proxy/shared/InkXml.h
    proxy/shared/UglyLogStubs.cc
    proxy/spdy/SpdyCallbacks.cc
    proxy/spdy/SpdyCallbacks.h
    proxy/spdy/SpdyClientSession.cc
    proxy/spdy/SpdyClientSession.h
    proxy/spdy/SpdyCommon.cc
    proxy/spdy/SpdyCommon.h
    proxy/spdy/SpdyDefs.h
    proxy/spdy/SpdySessionAccept.cc
    proxy/spdy/SpdySessionAccept.h
    proxy/AbstractBuffer.cc
    proxy/AbstractBuffer.h
    proxy/CacheControl.cc
    proxy/CacheControl.h
    proxy/CompletionUtil.h
    proxy/ConfigParse.h
    proxy/ControlBase.cc
    proxy/ControlBase.h
    proxy/ControlMatcher.cc
    proxy/ControlMatcher.h
    proxy/CoreUtils.cc
    proxy/CoreUtils.h
    proxy/Crash.cc
    proxy/EventName.cc
    proxy/EventName.h
    proxy/FetchSM.cc
    proxy/FetchSM.h
    proxy/HttpTransStats.h
    proxy/ICP.cc
    proxy/ICP.h
    proxy/ICPConfig.cc
    proxy/ICPevents.h
    proxy/ICPlog.h
    proxy/ICPProcessor.cc
    proxy/ICPProcessor.h
    proxy/ICPStats.cc
    proxy/InkAPI.cc
    proxy/InkAPIInternal.h
    proxy/InkAPITest.cc
    proxy/InkAPITestTool.cc
    proxy/InkIOCoreAPI.cc
    proxy/IPAllow.cc
    proxy/IPAllow.h
    proxy/logcat.cc
    proxy/logstats.cc
    proxy/Main.cc
    proxy/Main.h
    proxy/Milestones.h
    proxy/ParentConsistentHash.cc
    proxy/ParentConsistentHash.h
    proxy/ParentRoundRobin.cc
    proxy/ParentRoundRobin.h
    proxy/ParentSelection.cc
    proxy/ParentSelection.h
    proxy/Plugin.cc
    proxy/Plugin.h
    proxy/PluginVC.cc
    proxy/PluginVC.h
    proxy/Prefetch.cc
    proxy/Prefetch.h
    proxy/ProtocolProbeSessionAccept.cc
    proxy/ProtocolProbeSessionAccept.h
    proxy/ProxyClientSession.cc
    proxy/ProxyClientSession.h
    proxy/RegressionSM.cc
    proxy/RegressionSM.h
    proxy/ReverseProxy.cc
    proxy/ReverseProxy.h
    proxy/sac.cc
    proxy/Show.h
    proxy/SocksProxy.cc
    proxy/StatPages.cc
    proxy/StatPages.h
    proxy/StufferUdpReceiver.cc
    proxy/test_xml_parser.cc
    proxy/TestClock.cc
    proxy/TestClusterHash.cc
    proxy/TestDNS.cc
    proxy/TestPreProc.cc
    proxy/TestPreProc.h
    proxy/TestProxy.cc
    proxy/TestRegex.cc
    proxy/TestSimpleProxy.cc
    proxy/TimeTrace.h
    proxy/Transform.cc
    proxy/Transform.h
    proxy/TransformInternal.h
    proxy/UDPAPIClientTest.cc
    proxy/UDPAPIClientTest.h
    proxy/UDPAPITest.cc
    proxy/UDPAPITest.h
    proxy/UnixCompletionUtil.h
    proxy/UserNameCacheTest.h
    tools/http_load/http_load.c
    tools/http_load/port.h
    tools/http_load/timers.c
    tools/http_load/timers.h
    tools/jtest/jtest.cc
    tools/lighttpd_mod_generator/mod_generator.c)

add_executable(trafficserver ${SOURCE_FILES})